2.3.0:
- New: Jost* typeface
- New: animated splash screen in settings
- New: immersive fullscreen experience in settings
- New: start with boot
- New: Optimized for Android 11 and support down to Android 5
- Improved: more information in settings
- Improved: internal cleanup

2.2.0:
- Improved: app icon
- Improved: internal cleanup

2.1.2:
- Improved: settings update
- Fixed: theme selection

2.1.1:
- Improved: description and appearance
- Fixed: interface style