@@ -47,7 +47,8 @@
       android:directBootAware="true"
       android:label="@string/app_name"
       android:name=".service.LiveWallpaperService"
-      android:permission="android.permission.BIND_WALLPAPER">
+      android:permission="android.permission.BIND_WALLPAPER"
+      tools:targetApi="n">
       <intent-filter>
         <action android:name="android.service.wallpaper.WallpaperService" />
       </intent-filter>
