@@ -2,10 +2,12 @@
 - New: Jost* typeface
 - New: animated splash screen in settings
 - New: immersive fullscreen experience in settings
+- New: medium size option
 - New: start with boot
-- New: Optimized for Android 11 and support down to Android 5
+- New: optimized for Android 11 and support down to Android 5
 - Improved: more information in settings
 - Improved: internal cleanup
+- Fix: color changes not being applied to launcher
 
 2.2.0:
 - Improved: app icon
